# BreadCrumb

./: README.md  pyproject.toml
.github/workflows/: ci.yml
carvx/: _aes.py  bitlocker.py  cli.py  handlers.py  images.py  signatures.py
tests/: bitlocker_builder.py  test_bitlocker.py  test_carver.py  test_handlers.py
web/: README.md  wsgi.py
web/carvx_web/: __init__.py  __main__.py  config.py  jobs.py  routes.py  runner.py
web/carvx_web/templates/: index.html
web/tests/: conftest.py  test_jobs.py  test_routes.py  test_runner.py
