[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "carvx"
version = "0.1.0"
description = "Signature-based file carver for disk images and block devices (photorec-style)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["forensics", "file-carving", "data-recovery", "disk-image", "photorec", "undelete"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Recovery Tools",
]

[project.urls]
Homepage = "https://github.com/sltcnb/BreadCrumb"
Repository = "https://github.com/sltcnb/BreadCrumb"
Issues = "https://github.com/sltcnb/BreadCrumb/issues"

[project.optional-dependencies]
# Optional accelerator. carvx decrypts BitLocker with zero deps (pure-Python
# AES); installing cryptography swaps in C-backed AES for a large speedup.
bitlocker = ["cryptography>=3.0"]

[project.scripts]
carvx = "carvx.cli:main"

[tool.setuptools.packages.find]
include = ["carvx*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

